--- a/benchmate/benchmate/doctype/bm_installed_apps/bm_installed_apps.json
+++ b/benchmate/benchmate/doctype/bm_installed_apps/bm_installed_apps.json
@@ -12,8 +12,7 @@
   "column_break_jghv",
   "version",
   "link",
-  "section_break_ggtn",
-  "git_log"
+  "commit"
  ],
  "fields": [
   {
@@ -50,25 +49,21 @@
    "label": "Link"
   },
   {
-   "fieldname": "git_log",
-   "fieldtype": "Small Text",
-   "in_list_view": 1,
-   "label": "Git Log"
-  },
-  {
    "fieldname": "column_break_jghv",
    "fieldtype": "Column Break"
   },
   {
-   "fieldname": "section_break_ggtn",
-   "fieldtype": "Section Break"
+   "fieldname": "commit",
+   "fieldtype": "Data",
+   "in_list_view": 1,
+   "label": "Commit"
   }
  ],
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-08-17 19:35:43.002644",
+ "modified": "2025-08-17 21:44:59.925833",
  "modified_by": "Administrator",
  "module": "BenchMate",
  "name": "BM Installed Apps",
