--- a/benchmate/benchmate/doctype/bm_app/bm_app.json
+++ b/benchmate/benchmate/doctype/bm_app/bm_app.json
@@ -65,7 +65,7 @@
    "table_fieldname": "installed_apps"
   }
  ],
- "modified": "2025-08-17 20:10:20.850577",
+ "modified": "2025-08-18 01:17:04.908817",
  "modified_by": "Administrator",
  "module": "BenchMate",
  "name": "BM App",
@@ -89,5 +89,6 @@
  "sort_field": "creation",
  "sort_order": "DESC",
  "states": [],
- "title_field": "app_title"
+ "title_field": "app_title",
+ "track_changes": 1
 }
